# spaceplot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  pyproject.toml
.github/workflows/: publish.yml
notebooks/: layout_v2.py  sp_layout.py
src/spaceplot/: __init__.py  aligner.py  montage_plot.py  utils.py
src/spaceplot/appearance/: _layout.py  display.py  layout.py  layout_v2.py  palettes.py  tools.py
src/spaceplot/decorators/: __init__.py  decorators.py  tools.py
src/spaceplot/plotting/: __init__.py  plotting.py
src/spaceplot/resources/palettes/: pal1.txt
