[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "spaceplot"
version = "0.0.0"
description = "Wrappers for Matplotlib"
keywords = ["matplotlib", "plotting", "wrappers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [{ name = "Florian Raths", email = "raths.f@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.10"

dependencies = ["matplotlib >= 3.7", "cmcrameri >= 1.9"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.6"]

[tool.uv]
required-version = ">=0.8.8"

[tool.uv-ship]
release-branch = "master"
